com: Activated process frontend & Backend

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -21,6 +21,9 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+p {
+  color : #C4C5C5;
+}
 
 
 ul,ol {
